[package]
name = "hydra"
version = "0.1.0"
authors = ["Dave Jones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
futures = { version = "0.3.13" }
rusqlite = { version = "0.25.0", features = ["bundled"] }
reqwest = { "version" = "0.11.2", features = ["blocking"] }